fixed all apis
